--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -9,5 +9,31 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtOptions": {
+    "Issuer": "https://localhost:44300",
+    "Audience": "https://localhost:44300",
+    "DurationInMinutes": 60,
+    "SecretKey": "very_long_secret_key_is_guarding_this_application_which_is_not_to_be_shared_with_anyone"
+  },
+  "ReverseProxy": {
+    "Routes": {
+      "route1": {
+        "ClusterId": "cluster1",
+        "Match": {
+          "Path": "/api/TodoLists/{**catch-all}"
+        },
+        "AuthorizationPolicy": "default"
+      }
+    },
+    "Clusters": {
+      "cluster1": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://localhost:5224"
+          }
+        }
+      }
+    }
+  }
 }
