--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -18,19 +18,60 @@
   },
   "ReverseProxy": {
     "Routes": {
-      "route1": {
-        "ClusterId": "cluster1",
+      "TodoLists": {
+        "ClusterId": "TodoApi",
         "Match": {
           "Path": "/api/TodoLists/{**catch-all}"
         },
         "AuthorizationPolicy": "default"
+      },
+      "TodoItems": {
+        "ClusterId": "TodoApi",
+        "Match": {
+          "Path": "/api/TodoItems/{**catch-all}"
+        }
+      },
+      "TodoApiSwagger": {
+        "ClusterId": "TodoApi",
+        "Match": {
+          "Path": "/api/TodoApi/specification.json"
+        }
+      },
+      "AuthServer": {
+        "ClusterId": "auth",
+        "Match": {
+          "Path": "/api/auth/{**catch-all}"
+        }
       }
     },
     "Clusters": {
-      "cluster1": {
+      "TodoApi": {
         "Destinations": {
           "destination1": {
-            "Address": "http://localhost:5224"
+            "Address": "https://localhost:7086",
+            "Swaggers": [
+              {
+                "PrefixPath": "/api",
+                "Paths": [
+                  "/TodoLists/specification.json"
+                ]
+              }
+            ]
+          }
+        }
+      },
+      "auth": {
+        "Destinations": {
+          "destination1": {
+            "Address": "https://localhost:7090",
+            "Swaggers": [
+              {
+                "PrefixPath": "/api",
+                "Paths": [
+                  "/auth/specification.json"
+                ]
+              }
+            ]
           }
         }
       }
