--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -38,10 +38,14 @@
     <PackageVersion Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="8.0.6" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
+    <PackageVersion Include="Microsoft.OpenApi" Version="1.4.3" />
     <PackageVersion Include="Moq" Version="4.20.70" />
     <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
-    <PackageVersion Include="NSwag.AspNetCore" Version="14.0.7" />
-    <PackageVersion Include="NSwag.MSBuild" Version="14.0.7">
+    <PackageVersion Include="NSwag.AspNetCore" Version="14.0.8" />
+    <PackageVersion Include="NSwag.CodeGeneration" Version="14.0.8" />
+    <PackageVersion Include="NSwag.CodeGeneration.CSharp" Version="14.0.8" />
+    <PackageVersion Include="NSwag.CodeGeneration.TypeScript" Version="14.0.8" />
+    <PackageVersion Include="NSwag.MSBuild" Version="14.0.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageVersion>
@@ -53,6 +57,7 @@
     <PackageVersion Include="Microsoft.Playwright" Version="1.44.0" />
     <PackageVersion Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.57" />
     <PackageVersion Include="SpecFlow.NUnit" Version="3.9.74" />
+    <PackageVersion Include="Treyt.Yarp.ReverseProxy.Swagger" Version="3.8.0" />
     <PackageVersion Include="Yarp.ReverseProxy" Version="2.1.0" />
   </ItemGroup>
 </Project>
