--- a/src/AuthAPI/appsettings.json
+++ b/src/AuthAPI/appsettings.json
@@ -5,14 +5,15 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AllowedHosts": "*",
   "JwtOptions": {
     "Issuer": "https://localhost:44300",
     "Audience": "https://localhost:44300",
     "DurationInMinutes": 60,
     "SecretKey": "very_long_secret_key_is_guarding_this_application_which_is_not_to_be_shared_with_anyone"
-  },
-  "AllowedHosts": "*"
+  }
 }
