--- a/src/Web/ClientApp/package.json
+++ b/src/Web/ClientApp/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^5.2.3",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.4",
+    "jwt-decode": "^4.0.0",
     "merge": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
