--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -42,6 +42,24 @@
         "Match": {
           "Path": "/api/auth/{**catch-all}"
         }
+      },
+      "EduApiCourse": {
+        "ClusterId": "EduApi",
+        "Match": {
+          "Path": "/api/course/{**catch-all}"
+        }
+      },
+      "EduApiLesson": {
+        "ClusterId": "EduApi",
+        "Match": {
+          "Path": "/api/lesson/{**catch-all}"
+        }
+      },
+      "EduApiSwagger": {
+        "ClusterId": "EduApi",
+        "Match": {
+          "Path": "/api/EduApi/specification.json"
+        }
       }
     },
     "Clusters": {
@@ -69,6 +87,21 @@
                 "PrefixPath": "/api",
                 "Paths": [
                   "/auth/specification.json"
+                ]
+              }
+            ]
+          }
+        }
+      },
+      "EduApi": {
+        "Destinations": {
+          "destination1": {
+            "Address": "https://localhost:7156",
+            "Swaggers": [
+              {
+                "PrefixPath": "/api",
+                "Paths": [
+                  "/EduApi/specification.json"
                 ]
               }
             ]
