--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -37,9 +37,11 @@
     <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="8.0.6" />
+    <PackageVersion Include="Microsoft.Extensions.Identity.Stores" Version="8.0.6" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
     <PackageVersion Include="Microsoft.OpenApi" Version="1.4.3" />
     <PackageVersion Include="Moq" Version="4.20.70" />
+    <PackageVersion Include="Moq.EntityFrameworkCore" Version="8.0.1.2" />
     <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
     <PackageVersion Include="NSwag.AspNetCore" Version="14.0.8" />
     <PackageVersion Include="NSwag.CodeGeneration" Version="14.0.8" />
