--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -10,4 +10,11 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Enums\" />
+    <Folder Include="Events\" />
+    <Folder Include="Exceptions\" />
+    <Folder Include="ValueObjects\" />
+  </ItemGroup>
+
 </Project>
