Add enrollments api proxy

--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -36,6 +36,12 @@
           "Path": "/api/lesson/{**catch-all}"
         }
       },
+      "EduApiEnrollment": {
+        "ClusterId": "EduApi",
+        "Match": {
+          "Path": "/api/enrollment/{**catch-all}"
+        }
+      },
       "EduApiSwagger": {
         "ClusterId": "EduApi",
         "Match": {
